--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,6 @@ a.bottom-icon:hover {
      -moz-border-radius: 7px;
           border-radius: 7px;
   height: 100%;
-  border: 1px solid transparent;
   -webkit-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
@@ -321,10 +320,9 @@ a.bottom-icon:hover {
 }
 
 .features-sec-item:hover {
-  border: 1px solid rgba(45, 57, 80, 0.1);
-  -webkit-box-shadow: 0 2px 25px rgba(45, 57, 80, 0.2);
-     -moz-box-shadow: 0 2px 25px rgba(45, 57, 80, 0.2);
-          box-shadow: 0 2px 25px rgba(45, 57, 80, 0.2);
+  -webkit-box-shadow: 0 20px 60px 0 rgba(0,0,0,.05);
+     -moz-box-shadow: 0 20px 60px 0 rgba(0,0,0,.05);
+          box-shadow: 0 20px 60px 0 rgba(0,0,0,.05);
 }
 
 .features-sec-item span {
@@ -464,8 +462,8 @@ a.bottom-icon:hover {
 
 /******* stay section start *******/
 .stay-sec {
-  position: relative;
   padding: 80px 70px;
+  background-color: rgba(45, 57, 80, 0.85);
   background-image: url(../img/road.jpg);
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -474,16 +472,7 @@ a.bottom-icon:hover {
           background-size: cover;
   background-position: center center;
   color: #ffffff;
-}
-
-.stay-sec::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(45, 57, 80, 0.85);
+  background-blend-mode: multiply;
 }
 
 .stay-sec-top {
@@ -712,9 +701,9 @@ a.modal-custom-btn {
   -o-transition: opacity 0.3s ease-in-out;
   -moz-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
-  -webkit-box-shadow: 1px 2px 15px rgba(45, 57, 80, 0.4);
-     -moz-box-shadow: 1px 2px 15px rgba(45, 57, 80, 0.4);
-          box-shadow: 1px 2px 15px rgba(45, 57, 80, 0.4);
+  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+     -moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
   text-shadow: 0 0 2px rgba(45, 57, 80, 0.5);
 }
 
